[package]
name = "forge-1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }      # lets Rust do async (wait for AI replies without freezing)
reqwest = { version = "0.12", features = ["json"] }  # lets Rust talk to Ollama over HTTP
serde = { version = "1", features = ["derive"] }     # converts Rust data <-> JSON
serde_json = "1"                                     # JSON handling
axum = "0.7"                                          # the web server (our "Door"/API)
anyhow = "1"                                          # simpler error handling